--- a/Source/Engine/imgui.ini
+++ b/Source/Engine/imgui.ini
@@ -19,19 +19,24 @@ Size=268,86
 Collapsed=0
 
 [Window][Add a Class]
-Pos=403,203
+Pos=126,357
 Size=224,115
 Collapsed=0
 
 [Window][About]
-Pos=420,351
+Pos=294,351
 Size=283,86
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=346,187
-Size=550,680
-Collapsed=1
+Pos=595,147
+Size=587,576
+Collapsed=0
+
+[Window][Add a Actor]
+Pos=143,216
+Size=224,155
+Collapsed=0
 
 [Table][0xA43C3885,3]
 RefScale=13
