Check Class Name

--- a/Source/Engine/imgui.ini
+++ b/Source/Engine/imgui.ini
@@ -29,13 +29,23 @@ Size=283,86
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=595,147
+Pos=227,148
 Size=587,576
-Collapsed=0
+Collapsed=1
 
 [Window][Add a Actor]
 Pos=420,219
 Size=224,155
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=349,397
+Size=409,172
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,109
 Collapsed=0
 
 [Table][0xA43C3885,3]
