--- a/Source/Engine/imgui.ini
+++ b/Source/Engine/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=154,203
 Size=400,400
 Collapsed=0
 
@@ -24,28 +24,78 @@ Size=224,142
 Collapsed=0
 
 [Window][About]
-Pos=430,284
-Size=283,86
+Pos=548,333
+Size=283,130
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=275,142
-Size=587,576
-Collapsed=1
+Pos=406,290
+Size=711,617
+Collapsed=0
 
 [Window][Add a Actor]
-Pos=684,291
+Pos=724,295
 Size=224,159
 Collapsed=0
 
 [Window][Stacked 1]
-Pos=349,397
-Size=409,172
+Pos=552,303
+Size=472,331
 Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=195,236
 Size=570,109
+Collapsed=0
+
+[Window][Add a Tag]
+Pos=185,196
+Size=226,119
+Collapsed=0
+
+[Window][Delete?]
+Pos=569,353
+Size=311,118
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=890,485
+Size=218,87
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=333,323
+Collapsed=0
+
+[Window][New Class]
+Pos=484,178
+Size=249,262
+Collapsed=0
+
+[Window][New Actor]
+Pos=640,263
+Size=235,159
+Collapsed=0
+
+[Window][All Logs]
+Pos=521,294
+Size=496,262
+Collapsed=0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=260,67
+Size=800,600
+Collapsed=0
+
+[Window][View Assets]
+Pos=420,271
+Size=496,262
+Collapsed=0
+
+[Window][New Tag]
+Pos=593,324
+Size=224,119
 Collapsed=0
 
 [Table][0xA43C3885,3]
@@ -147,4 +197,18 @@ RefScale=13
 Column 0  Width=63
 Column 1  Width=63
 Column 2  Width=63
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x5E7B4F09,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
