--- a/Source/Engine/imgui.ini
+++ b/Source/Engine/imgui.ini
@@ -24,7 +24,7 @@ Size=224,142
 Collapsed=0
 
 [Window][About]
-Pos=550,333
+Pos=420,304
 Size=283,130
 Collapsed=0
 
@@ -69,33 +69,38 @@ Size=333,323
 Collapsed=0
 
 [Window][New Class]
-Pos=489,178
+Pos=492,178
 Size=224,262
 Collapsed=0
 
 [Window][New Actor]
-Pos=651,263
+Pos=655,263
 Size=235,159
 Collapsed=0
 
 [Window][All Logs]
-Pos=542,294
+Pos=552,294
 Size=496,262
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=270,67
+Pos=273,67
 Size=800,600
 Collapsed=0
 
 [Window][View Assets]
-Pos=431,271
+Pos=436,271
 Size=496,262
 Collapsed=0
 
 [Window][New Tag]
-Pos=598,324
-Size=283,119
+Pos=599,324
+Size=261,119
+Collapsed=0
+
+[Window][New Component]
+Pos=667,357
+Size=66,54
 Collapsed=0
 
 [Table][0xA43C3885,3]
