--- a/Source/Engine/Engine.vcxproj
+++ b/Source/Engine/Engine.vcxproj
@@ -25,6 +25,8 @@
     <ClCompile Include="EngineAPI.cpp"/>
     <ClCompile Include="implClass_Car.cpp"/>
     <ClInclude Include="implClass_Car.h"/>
+    <ClCompile Include="implClass_Dog.cpp"/>
+    <ClInclude Include="implClass_Dog.h"/>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
